fix: change logic to check

--- a/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
@@ -1,7 +1,7 @@
 ---
-id: implementing-authentication-and-authorization-logic
-title: Implementing Authentication and Authorization Logic
-sidebar_label: Implementing Authentication and Authorization Logic
+id: implementing-authentication-and-authorization-checks
+title: Implementing Authentication and Authorization Checks
+sidebar_label: Implementing Authentication and Authorization Checks
 keywords:
   [
     "create",
@@ -20,11 +20,11 @@ description: Learn how to implement authentication and authorization checks with
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import createPinMutation from "./implementing-authentication-and-authorization-logic/create-pin-mutation-test.png";
-import createPinMutationUnauthorized from "./implementing-authentication-and-authorization-logic/create-pin-mutation-unauthorized.png";
-import updatePinMutationCannotUpdateOtherUsersPin from "./implementing-authentication-and-authorization-logic/update-pin-cannot-update-other-users-pin.png";
-import updatePinMutationCreateWithUser from "./implementing-authentication-and-authorization-logic/update-pin-create-with-user.png";
-import updatePinMutationUpdateWithUser from "./implementing-authentication-and-authorization-logic/update-pin-update-with-user.png";
+import createPinMutation from "./implementing-authentication-and-authorization-checks/create-pin-mutation-test.png";
+import createPinMutationUnauthorized from "./implementing-authentication-and-authorization-checks/create-pin-mutation-unauthorized.png";
+import updatePinMutationCannotUpdateOtherUsersPin from "./implementing-authentication-and-authorization-checks/update-pin-cannot-update-other-users-pin.png";
+import updatePinMutationCreateWithUser from "./implementing-authentication-and-authorization-checks/update-pin-create-with-user.png";
+import updatePinMutationUpdateWithUser from "./implementing-authentication-and-authorization-checks/update-pin-update-with-user.png";
 
 :::tip WHAT YOU’LL LEARN
 
