--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
@@ -22,7 +22,7 @@ description: Learn how we can add and deploy a new User Pool Client, via React a
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import cloudInfraAutoDeploy from "./adding-user-pool-and-user-pool-domain/cloud-infra-auto-deploy.png";
+import cloudInfraDeploy from "./adding-user-pool-client/cloud-infra-deploy.png";
 
 :::tip WHAT YOU’LL LEARN
 
@@ -90,8 +90,7 @@ Some of the more important properties here would be the `userPoolId`, which dete
 
 Like in the previous section, the next step is to visit the [`index.ts`](#) entry point file, located in the [`pinterest-clone/app/pulumi/index.ts`](#) folder. There, we'll import the newly created file, instantiate the `Cognito` class so that the encapsulated cloud infrastructure code actually gets executed, and finally, update the properties stack output properties. Here we'll add the `cognitoUserPoolClientId` property, which, as the name suggests, will contain the ID of the deployed User Pool Client.
 
-```ts title="pinterest-clone/app/pulumi/index.ts" {14,25,29-31}
-import * as pulumi from "@pulumi/pulumi";
+```ts title="pinterest-clone/app/pulumi/index.ts" {13,24,28-30}
 import { tagResources } from "@webiny/cli-plugin-deploy-pulumi/utils";
 
 /**
@@ -107,22 +106,22 @@ import Cloudfront from "./cloudfront";
 import Cognito from "./cognito";
 
 export = async () => {
-  // Add tags to all resources that support tagging.
-  tagResources({
-    WbyProjectName: process.env.WEBINY_PROJECT_NAME as string,
-    WbyEnvironment: process.env.WEBINY_ENV as string,
-  });
+    // Add tags to all resources that support tagging.
+    tagResources({
+        WbyProjectName: process.env.WEBINY_PROJECT_NAME as string,
+        WbyEnvironment: process.env.WEBINY_ENV as string
+    });
 
-  const app = new App();
-  const cloudfront = new Cloudfront({ appS3Bucket: app.bucket });
-  const cognito = new Cognito({ cloudfront });
+    const app = new App();
+    const cloudfront = new Cloudfront({ appS3Bucket: app.bucket });
+    const cognito = new Cognito({ cloudfront });
 
-  return {
-    appUrl: pulumi.interpolate`https://${cloudfront.distribution.domainName}`,
-    cognitoUserPool: {
-      clientId: cognito.userPoolClient.id,
-    },
-  };
+    return {
+        appUrl: cloudfront.getDistributionUrl(),
+        cognitoUserPool: {
+            clientId: cognito.userPoolClient.id
+        }
+    };
 };
 ```
 
@@ -151,14 +150,23 @@ yarn webiny deploy pinterest-clone/app --env dev --no-build
 
 Notice the `--no-build` argument at the end of the command. With it, we've instructed the [`webiny deploy`](#) command to not worry about our React application, and just ensure that the supporting cloud infrastructure resources are deployed. Furthermore, note that this will not only deploy the newly defined User Pool Client, but also other already defined resources - a [CloudFront distribution](#) and an [Amazon S3 bucket](#).
 
+
+<CenteredImage
+  alt="Initial deployment of Cloud Infrastructure"
+  style={{ maxWidth: 750 }}
+  src={cloudInfraDeploy}
+/>
+
 ## Final Result
 
 In this section, we defined and deployed the last cloud infrastructure resource that we need in order to implement the Hosted UI authentication flow: the User Pool Client. Also, by adding `cognitoUserPoolClientId` to stack output properties, we've exposed the ID of the deployed User Pool Client. This will enable us to later retrieve it within our React application code and connect everything together.
 
 With all of this in place, there's one additional step we need to complete before we finally start working on our React application code, and that's adjusting its [`webiny.config.ts`](#) configuration file.
 
+<!--
 ## FAQ
 
 #### Local vs. Cloud Native Development? TODO
 
 With serverless and cloud-native development, these kinds of situations are not unusual. Yes, it may be a bit cumbersome to deploy cloud infrastructure resources when we're just developing our application locally. But, on the other hand, we need to have the GraphQL API deployed anyhow. And, at least with this approach, we're testing our React application with real cloud infrastructure resources, and not some kind of emulations or mocks, which, in some cases, can provide false positives and can be even harder to set up.
+ -->
