--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -97,6 +97,7 @@ If we were to open the cloud infrastructure code that is initially included duri
 return {
   region: process.env.AWS_REGION,
   apiUrl: cloudfront.getDistributionUrl(),
+  graphqlApiUrl: cloudfront.getDistributionUrl("/graphql"),
   dynamoDbTable: dynamoDb.table.name,
 };
 ```
@@ -105,43 +106,58 @@ It's important to note that the returned object represents something called the 
 
 The stack output can then be retrieved within cloud infrastructure or application code that is part of the same, or an entirely separate, [project application](/docs/key-topics/project-organization/project-applications). For example, if we were to open the React application's [`webiny.config.ts`](#) configuration file, located in [`pinterest-clone/app/code/webiny.config.ts`](#), we'd see that we're using the [`getStackOutput`](#) function in order to retrieve the URL over which our GraphQL API can be accessed:
 
-```ts title="pinterest-clone/app/code/webiny.config.ts" {3,13-15,23,30}
+```ts title="pinterest-clone/app/code/webiny.config.ts" {3,13-16,24-31,38-45}
 import invariant from "invariant";
 import { startApp, buildApp } from "@webiny/project-utils";
 import { getStackOutput } from "@webiny/cli-plugin-deploy-pulumi/utils";
 
 // Exports fundamental start (watch) and build commands.
-// Within both commands, we rely on the deployed GraphQL API (project-applications-path/api) and its stack
+// Within both commands, we rely on the deployed GraphQL API (pinterest-clone/api) and its stack
 // output to retrieve the URL over which the GraphQL API is accessible. If needed, additional
 // information can be retrieved too, but remember to export it in the cloud infrastructure
 // code, in the following files:
-// - `project-applications-path/api/pulumi/dev/index.ts`
-// - `project-applications-path/api/pulumi/prod/index.ts`
+// - `pinterest-clone/api/pulumi/dev/index.ts`
+// - `pinterest-clone/api/pulumi/prod/index.ts`
 
-const MAP = {
-  REACT_APP_GRAPHQL_API_URL: "${graphqlApiUrl}",
+const API_MAP = {
+    REACT_APP_API_URL: "${apiUrl}",
+    REACT_APP_GRAPHQL_API_URL: "${apiUrl}/graphql"
 };
 
 const NO_ENV_MESSAGE = `Please specify the environment via the "--env" argument, for example: "--env dev".`;
 
 export default {
-  commands: {
-    async watch(options, context) {
-      invariant(options.env, NO_ENV_MESSAGE);
-      Object.assign(process.env, getStackOutput("pinterest-clone/api", options.env, MAP));
+    commands: {
+        async watch(options, context) {
+            invariant(options.env, NO_ENV_MESSAGE);
+            Object.assign(
+                process.env,
+                getStackOutput({
+                    folder: "pinterest-clone/api",
+                    env: options.env,
+                    map: API_MAP
+                })
+            );
 
-      // Starts local application development.
-      await startApp(options, context);
-    },
-    async build(options, context) {
-      invariant(options.env, NO_ENV_MESSAGE);
-      Object.assign(process.env, getStackOutput("pinterest-clone/api", options.env, MAP));
+            // Starts local application development.
+            await startApp(options, context);
+        },
+        async build(options, context) {
+            invariant(options.env, NO_ENV_MESSAGE);
+            Object.assign(
+                process.env,
+                getStackOutput({
+                    folder: "pinterest-clone/api",
+                    env: options.env,
+                    map: API_MAP
+                })
+            );
 
-      // Creates a production build of your application, ready to be deployed to
-      // a hosting provider of your choice, for example Amazon S3.
-      await buildApp(options, context);
-    },
-  },
+            // Creates a production build of your application, ready to be deployed to
+            // a hosting provider of your choice, for example Amazon S3.
+            await buildApp(options, context);
+        }
+    }
 };
 ```
 
