--- a/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
@@ -55,6 +55,11 @@ mutation CreatePin($data: PinCreateInput!) {
       id
       title
       description
+      createdBy {
+        id
+        type
+        displayName
+      }
     }
   }
 }
@@ -199,6 +204,11 @@ mutation UpdatePin($id: ID!, $data: PinUpdateInput!) {
       id
       title
       description
+      createdBy {
+        id
+        type
+        displayName
+      }
     }
   }
 }
