--- a/docs/tutorials/create-custom-application/security/react-application/initial-setup.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/initial-setup.mdx
@@ -148,24 +148,26 @@ import "antd/dist/antd.css";
 // The beginning of our React application, where we mount a couple of useful providers.
 // If needed, feel free to add new or modify existing providers.
 export const App = () => (
-  <>
-    {/*
+    <>
+        {/*
             <SecurityProvider> is a generic provider of identity information. 3rd party identity providers (like Cognito,
             Okta, Auth0) will handle the authentication, and set the information about the user into this provider,
             so other parts of the system have a centralized place to fetch user information from.
         */}
-    <SecurityProvider>
-      <Authenticator>
-        {/* Sets up a new Apollo GraphQL client, pointed to an existing GraphQL API. */}
-        <ApolloProvider client={createApolloClient({ uri: process.env.REACT_APP_GRAPHQL_API_URL })}>
-          {/* Enables routing in our application. */}
-          <BrowserRouter basename={process.env.PUBLIC_URL}>
-            <Routes />
-          </BrowserRouter>
-        </ApolloProvider>
-      </Authenticator>
-    </SecurityProvider>
-  </>
+        <SecurityProvider>
+            <Authenticator>
+                {/* Sets up a new Apollo GraphQL client, pointed to an existing GraphQL API. */}
+                <ApolloProvider
+                    client={createApolloClient({ uri: process.env.REACT_APP_GRAPHQL_API_URL })}
+                >
+                    {/* Enables routing in our application. */}
+                    <BrowserRouter basename={process.env.PUBLIC_URL}>
+                        <Routes />
+                    </BrowserRouter>
+                </ApolloProvider>
+            </Authenticator>
+        </SecurityProvider>
+    </>
 );
 ```
 
